--- a/src/source.extension.resx
+++ b/src/source.extension.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="110" xml:space="preserve">
-    <value>Editorsk Text Enhancements</value>
+    <value>Text Enhancements</value>
   </data>
   <data name="112" xml:space="preserve">
     <value>Provides additional features such as HTML and URL encodings, transformations and sorting of selected text the editor.</value>
